# server/api/v1/huasu/construction_manage.go
@@ -1,0 +1,203 @@
+package huasu
+
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/kuihuar/huasu-admin/server/global"
+	"github.com/kuihuar/huasu-admin/server/model/common/response"
+	"github.com/kuihuar/huasu-admin/server/model/huasu"
+	huasuReq "github.com/kuihuar/huasu-admin/server/model/huasu/request"
+	"go.uber.org/zap"
+)
+
+type ConstructionManageApi struct{}
+
+// CreateConstructionManage 创建工程管理
+// @Tags ConstructionManage
+// @Summary 创建工程管理
+// @Security ApiKeyAuth
+// @Accept application/json
+// @Produce application/json
+// @Param data body huasu.ConstructionManage true "创建工程管理"
+// @Success 200 {object} response.Response{msg=string} "创建成功"
+// @Router /constructionManage/createConstructionManage [post]
+func (constructionManageApi *ConstructionManageApi) CreateConstructionManage(c *gin.Context) {
+	// 创建业务用Context
+	ctx := c.Request.Context()
+
+	var constructionManage huasu.ConstructionManage
+	err := c.ShouldBindJSON(&constructionManage)
+	if err != nil {
+		response.FailWithMessage(err.Error(), c)
+		return
+	}
+	err = constructionManageService.CreateConstructionManage(ctx, &constructionManage)
+	if err != nil {
+		global.GVA_LOG.Error("创建失败!", zap.Error(err))
+		response.FailWithMessage("创建失败:"+err.Error(), c)
+		return
+	}
+	response.OkWithMessage("创建成功", c)
+}
+
+// DeleteConstructionManage 删除工程管理
+// @Tags ConstructionManage
+// @Summary 删除工程管理
+// @Security ApiKeyAuth
+// @Accept application/json
+// @Produce application/json
+// @Param data body huasu.ConstructionManage true "删除工程管理"
+// @Success 200 {object} response.Response{msg=string} "删除成功"
+// @Router /constructionManage/deleteConstructionManage [delete]
+func (constructionManageApi *ConstructionManageApi) DeleteConstructionManage(c *gin.Context) {
+	// 创建业务用Context
+	ctx := c.Request.Context()
+
+	ID := c.Query("ID")
+	err := constructionManageService.DeleteConstructionManage(ctx, ID)
+	if err != nil {
+		global.GVA_LOG.Error("删除失败!", zap.Error(err))
+		response.FailWithMessage("删除失败:"+err.Error(), c)
+		return
+	}
+	response.OkWithMessage("删除成功", c)
+}
+
+// DeleteConstructionManageByIds 批量删除工程管理
+// @Tags ConstructionManage
+// @Summary 批量删除工程管理
+// @Security ApiKeyAuth
+// @Accept application/json
+// @Produce application/json
+// @Success 200 {object} response.Response{msg=string} "批量删除成功"
+// @Router /constructionManage/deleteConstructionManageByIds [delete]
+func (constructionManageApi *ConstructionManageApi) DeleteConstructionManageByIds(c *gin.Context) {
+	// 创建业务用Context
+	ctx := c.Request.Context()
+
+	IDs := c.QueryArray("IDs[]")
+	err := constructionManageService.DeleteConstructionManageByIds(ctx, IDs)
+	if err != nil {
+		global.GVA_LOG.Error("批量删除失败!", zap.Error(err))
+		response.FailWithMessage("批量删除失败:"+err.Error(), c)
+		return
+	}
+	response.OkWithMessage("批量删除成功", c)
+}
+
+// UpdateConstructionManage 更新工程管理
+// @Tags ConstructionManage
+// @Summary 更新工程管理
+// @Security ApiKeyAuth
+// @Accept application/json
+// @Produce application/json
+// @Param data body huasu.ConstructionManage true "更新工程管理"
+// @Success 200 {object} response.Response{msg=string} "更新成功"
+// @Router /constructionManage/updateConstructionManage [put]
+func (constructionManageApi *ConstructionManageApi) UpdateConstructionManage(c *gin.Context) {
+	// 从ctx获取标准context进行业务行为
+	ctx := c.Request.Context()
+
+	var constructionManage huasu.ConstructionManage
+	err := c.ShouldBindJSON(&constructionManage)
+	if err != nil {
+		response.FailWithMessage(err.Error(), c)
+		return
+	}
+	err = constructionManageService.UpdateConstructionManage(ctx, constructionManage)
+	if err != nil {
+		global.GVA_LOG.Error("更新失败!", zap.Error(err))
+		response.FailWithMessage("更新失败:"+err.Error(), c)
+		return
+	}
+	response.OkWithMessage("更新成功", c)
+}
+
+// FindConstructionManage 用id查询工程管理
+// @Tags ConstructionManage
+// @Summary 用id查询工程管理
+// @Security ApiKeyAuth
+// @Accept application/json
+// @Produce application/json
+// @Param ID query uint true "用id查询工程管理"
+// @Success 200 {object} response.Response{data=huasu.ConstructionManage,msg=string} "查询成功"
+// @Router /constructionManage/findConstructionManage [get]
+func (constructionManageApi *ConstructionManageApi) FindConstructionManage(c *gin.Context) {
+	// 创建业务用Context
+	ctx := c.Request.Context()
+
+	ID := c.Query("ID")
+	reconstructionManage, err := constructionManageService.GetConstructionManage(ctx, ID)
+	if err != nil {
+		global.GVA_LOG.Error("查询失败!", zap.Error(err))
+		response.FailWithMessage("查询失败:"+err.Error(), c)
+		return
+	}
+	response.OkWithData(reconstructionManage, c)
+}
+
+// GetConstructionManageList 分页获取工程管理列表
+// @Tags ConstructionManage
+// @Summary 分页获取工程管理列表
+// @Security ApiKeyAuth
+// @Accept application/json
+// @Produce application/json
+// @Param data query huasuReq.ConstructionManageSearch true "分页获取工程管理列表"
+// @Success 200 {object} response.Response{data=response.PageResult,msg=string} "获取成功"
+// @Router /constructionManage/getConstructionManageList [get]
+func (constructionManageApi *ConstructionManageApi) GetConstructionManageList(c *gin.Context) {
+	// 创建业务用Context
+	ctx := c.Request.Context()
+
+	var pageInfo huasuReq.ConstructionManageSearch
+	err := c.ShouldBindQuery(&pageInfo)
+	if err != nil {
+		response.FailWithMessage(err.Error(), c)
+		return
+	}
+	list, total, err := constructionManageService.GetConstructionManageInfoList(ctx, pageInfo)
+	if err != nil {
+		global.GVA_LOG.Error("获取失败!", zap.Error(err))
+		response.FailWithMessage("获取失败:"+err.Error(), c)
+		return
+	}
+	response.OkWithDetailed(response.PageResult{
+		List:     list,
+		Total:    total,
+		Page:     pageInfo.Page,
+		PageSize: pageInfo.PageSize,
+	}, "获取成功", c)
+}
+
+// GetConstructionManagePublic 不需要鉴权的工程管理接口
+// @Tags ConstructionManage
+// @Summary 不需要鉴权的工程管理接口
+// @Accept application/json
+// @Produce application/json
+// @Param data query huasuReq.ConstructionManageSearch true "分页获取工程管理列表"
+// @Success 200 {object} response.Response{data=response.PageResult,msg=string} "获取成功"
+// @Router /constructionManage/getConstructionManagePublic [get]
+func (constructionManageApi *ConstructionManageApi) GetConstructionManagePublic(c *gin.Context) {
+	// 创建业务用Context
+	ctx := c.Request.Context()
+
+	var search huasuReq.ConstructionManageSearch
+	err := c.ShouldBindQuery(&search)
+	if err != nil {
+		response.FailWithMessage(err.Error(), c)
+		return
+	}
+	// 此接口不需要鉴权
+	// 示例为返回了一个固定的消息接口，一般本接口用于C端服务，需要自己实现业务逻辑
+	list, total, err := constructionManageService.GetConstructionManagePublic(ctx, search)
+	if err != nil {
+		global.GVA_LOG.Error("获取失败!", zap.Error(err))
+		response.FailWithMessage("获取失败:"+err.Error(), c)
+		return
+	}
+	response.OkWithDetailed(response.PageResult{
+		List:  list,
+		Total: total,
+		// Page:     pageInfo.Page,
+		// PageSize: pageInfo.PageSize,
+	}, "获取成功", c)
+}
