# server/initialize/gorm_biz.go
@@ -7,7 +7,7 @@ import (
 
 func bizModel() error {
 	db := global.GVA_DB
-	err := db.AutoMigrate(huasu.CarouselManage{}, huasu.Notice{}, huasu.News{})
+	err := db.AutoMigrate(huasu.CarouselManage{}, huasu.Notice{}, huasu.News{}, huasu.ConstructionManage{})
 	if err != nil {
 		return err
 	}
